Fixed gap between white and yellow blocks

--- a/style.css
+++ b/style.css
@@ -59,8 +59,22 @@ body {
     grid-row-end: 5;
     grid-column-start: 3;
     grid-column-end: 4;
+    position: relative;
+}
+
+.bottom-right .area {
+    width: 100%;
+    height: 100%;
     display: grid;
-    row-gap: var(--mid-gap);
+}
+
+.bottom-right .gap {
+    width: 95%;
+    background-color: black;
+    height: var(--mid-gap);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
 }
 
 .bottom {
